# danielutils

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  LISENCE  Makefile  README.md  __init__.py  create_test_file.py  folder_stats.py  j.json  mypy.ini  publish.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run_tests.py  setup.cfg  setup.py  test_stats.py  tmp.py
.cursor/rules/: log-rules.mdc  test-rules.mdc
.github/workflows/: codeql.yml  gitleaks.yml  pylint.yml  python-package.yml  test.yml
READMES/: Interface.md  async_worker_pool.md  database_abstraction.md  isoftype.md  overload.md  progress_bar.md  readme.md  retry_executor.md  singleton.md  tlist.md  validate.md
danielutils/: Aliases.py  Color.py  Colors.py  Conversions.py  Data.py  DateTime.py  Decorators.py  Exceptions.py  Functions.py  IO.py  Internet.py  Path.py  Print.py  Reflection.py  Relations.py  Serialization.py  System.py  Testing.py  Text.py  Threading.py  Time.py  Typing.py  Windows.py  __init__.py  aliases.py  colors.py  convenience.py  custom_types.py  d_print.py  date.py  date_time.py  exceptions.py  files_and_folders.py  internet.py  io_.py  logging_.py  loops.py  multi_x.py  my_tqdm.py  path.py  (+7 more)
danielutils/Classes/: Convenience.py  Counter.py  DataStructures.py  Graphics.py  Shell.py  TypedBuiltins.py  __init__.py  frange.py
danielutils/Conversions/: MainConversions.py
danielutils/DataStructures/: Comparer.py  Graph.py  Heap.py  Interface.py  MarkovChain.py  Node.py  Queue.py  Stack.py  __init__.py  functions.py
danielutils/Decorators/: PartiallyImplemented.py  __init__.py  atomic.py  attach.py  chain_decorators.py  decorate_conditionally.py  delay_call.py  deprecate.py  limit_recursion.py  limit_runtime.py  memo.py  overload.py  processify.py  property.py  threadify.py  timeout.py  validate.py
danielutils/Functions/: __init__.py  areoneof.py  isoftype.py  isoneof.py  powerset.py  types_subseteq.py
danielutils/Generators/: __init__.py  conditional_generator.py  generator_from_stream.py  join_generators.py  join_generators_busy_waiting.py
danielutils/Math/: Constants.py  Fraction.py  Functions.py  Limit.py  MathPrint.py  MathSymbols.py  Polynomial.py  Sigma.py  __init__.py  long.py  math_print.py  math_symbols.py
danielutils/MetaClasses/: AtomicClassMeta.py  ImplicitDataDeleterMeta.py  InstanceCacheMeta.py  Interface.py  OverloadMeta.py  __init__.py
danielutils/Reflection/: Class.py  File.py  Function.py  System.py  __init__.py  _get_prev_frame.py  get_prev_frame.py  get_traceback.py
danielutils/Snippets/: try_get.py
danielutils/System/: __init__.py  independent.py
danielutils/Threading/: __init__.py  worker.py  worker_pool.py
danielutils/University/: __init__.py
danielutils/abstractions/: __init__.py  repl.py
danielutils/archive/: Internet.py  decorators_test.py  h.html
danielutils/async_/: __init__.py  async_cmd.py  async_command.py  async_layered_command.py  async_retry_executor.py  async_retry_executor_base.py  async_worker_pool.py  async_worker_pool_base.py  time_strategy.py  utils.py
danielutils/better_builtins/: __init__.py  counter.py  frange.py
danielutils/classes/: __init__.py  frange.py  repl.py
danielutils/context_managers/: __init__.py  attr_context.py  multi_context.py  optional_context.py  state_context.py  temporary_file.py
danielutils/conversions/: __init__.py  main_conversions.py
danielutils/data_structures/: Node.py  __init__.py  algorithms.py  comparer.py  default_dict.py  functions.py  graph.py  heap.py  queue.py  stack.py
danielutils/decorators/: PartiallyImplemented.py  __init__.py  atomic.py  attach.py  chain_decorators.py  decorate_conditionally.py  delay_call.py  deprecate.py  final.py  limit_recursion.py  memo.py  normalize_decorator.py  overload.py  partially_implemented.py  processify.py  singleton.py  threadify.py  timeout.py  total_ordering.py  validate.py
danielutils/file_specifications/: __init__.py
danielutils/functions/: __init__.py  areoneof.py  check_foreach.py  factorial.py  flatten.py  foreach.py  isoftype.py  isoneof.py  multiloop.py  parallel_for.py  partition.py  powerset.py  subseteq.py  types_subseteq.py
danielutils/generators/: __init__.py  conditional_generator.py  generator_from_stream.py  join_generators.py
danielutils/imports/: __init__.py  mock_module.py
danielutils/java/: __init__.py  java_interface.py
danielutils/logging_/: __init__.py  logger.py  logger_strategy_impl_base.py  utils.py
danielutils/lombok/: builder.py
danielutils/math/: __init__.py
danielutils/math_/: __init__.py  functions.py  (+2 more)
requirements/: dev.txt
tests/: base.py  base_command.py  decorators_test.py  test_conversions.py  test_decorators.py  test_functions.py  test_internet.py  test_io.py  test_system.py  test_testing.py  test_text.py  test_threading.py  test_time.py  test_typing.py  text_test.py
(+383 files in other folders)
