[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "danielutils"
version = "1.1.24"
authors = [
    { name = "danielnachumdev", email = "danielnachumdev@gmail.com" },
]
dependencies = [
    "pydantic>=2.10.6",
    "redis>=6.1.1",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.3",
]
keywords = []
license = { "file" = "./LICENSE" }
description = "A comprehensive Python utilities library providing type-safe collections, async programming tools, database abstractions, retry executors, data structures, and developer productivity enhancements to streamline Python development workflows"
readme = {file = "./README.md", content-type = "text/markdown"}
requires-python = ">=3.8.0"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Operating System :: Microsoft :: Windows"
]
[tool.setuptools]
packages = ["danielutils"]

[tool.setuptools.package-data]
"danielutils" = ["py.typed"]

[dependency-groups]
dev = [
    "githooklib>=1.0.0",
    "mypy>=1.14.1",
    "pylint>=3.2.7",
    "quickpub>=4.1.1",
    "setuptools>=75.3.4",
    "twine>=6.1.0",
    "types-tqdm>=4.67.0.20241221",
    "wheel>=0.45.1",
]
test = [
    "fastapi>=0.124.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "uvicorn>=0.33.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[project.urls]
"Homepage" = "https://github.com/danielnachumdev/danielutils"
"Bug Tracker" = "https://github.com/danielnachumdev/danielutils/issues"
