[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "danielutils"
version = "1.1.24"
authors = [
    { name = "danielnachumdev", email = "danielnachumdev@gmail.com" },
]
dependencies = [
    "pydantic>=2.10.6",
    "redis>=6.1.1",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.3",
]
keywords = []
license = { "file" = "./LICENSE" }
description = "A comprehensive Python utilities library providing type-safe collections, async programming tools, database abstractions, retry executors, data structures, and developer productivity enhancements to streamline Python development workflows"
readme = {file = "./README.md", content-type = "text/markdown"}
requires-python = ">=3.8.0"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Operating System :: Microsoft :: Windows"
]
[tool.setuptools]
packages = ["danielutils"]

[tool.setuptools.package-data]
"danielutils" = ["py.typed"]

[dependency-groups]
dev = [
    "githooklib>=1.0.0",
    "mypy>=1.14.1",
    "pylint>=3.2.7",
    "quickpub>=4.1.1",
    "setuptools>=75.3.4",
    "twine>=6.1.0",
    "types-tqdm>=4.67.0.20241221",
    "wheel>=0.45.1",
]
test = [
    "fastapi>=0.124.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "uvicorn>=0.33.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--strict-markers",
    "--tb=short",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--color=yes",
    "--durations=10",
    "-n",
    "auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["danielutils"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 50
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true
files = ["danielutils/*.py", "tests", "publish.py"]

[[tool.mypy.overrides]]
module = "*"
ignore_missing_imports = true

[tool.pylint.main]
ignore-paths = ["^tests/.*", "^tmp/.*"]

[tool.pylint.basic]
good-names = ["foo", "bar"]
good-names-rgxs = ["^[a-zA-Z]"]

[tool.pylint.naming]
class-rgx = "^(_)?[A-Z][a-zA-Z0-9]*$"
module-rgx = "^[a-zA-Z][a-zA-Z0-9_]*$"

[tool.pylint.messages_control]
disable = [
    "W0211",
    "C0114",
    "E1120",
    "E0611",
    "W0702",
    "W0612",
    "R0913",
    "C0415",
    "R0912",
    "R0903",
    "R0914",
    "R0911",
    "R1716",
    "W0401",
    "R0801",
]

[tool.pylint.format]
max-line-length = 120

[project.urls]
"Homepage" = "https://github.com/danielnachumdev/danielutils"
"Bug Tracker" = "https://github.com/danielnachumdev/danielutils/issues"
